# locci-vault

./: Cargo.toml  HTTP.rest  LICENSE.md  README.md
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  vault.rs
crates/core/src/auth/: identity.rs  mod.rs  policy.rs  token.rs
crates/core/src/crypto/: encryption.rs
crates/core/src/secrets/: engine.rs  mod.rs  transit.rs
crates/core/src/storage/: backend.rs  logical.rs  mod.rs  physical.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/http/src/middleware/: authentication.rs
crates/http/src/routes/: auth.rs  mod.rs  secrets.rs
docs/: architecture.md
