[workspace]
members = ["crates/core", "crates/http", "crates/cli"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across crates
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde_json = "1.0"
ring = "0.17"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
metrics = "0.21"
tonio = "0.9"
k8s-openapi = "0.16"
kube = { version = "0.87", features = ["client", "derive"] }
opentelemetry = "0.19"
opentelemetry-jaeger = "0.18"
tracing-opentelemetry = "0.19"
