[package]
name = "locci_vault_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
locci_vault_http = { path = "../http"}
locci_vault_core = { path = "../core"}
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
ring = "0.17"
tracing-subscriber = "0.1"
base64 = "0.22"
