[package]
name = "locci_vault_http"
version = "0.1.0"
edition = "2021"

[dependencies]
# locci_vault_core = { path = "../core"}
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
locci_vault_core = { path = "../../crates/core" }
futures = "0.3"